
  TODO: compile .po (documents)

  Users side :
  ------------
    # Several issues in the job scheduler has been fixed for periodic jobs :
        - The start date of the jobs depended on the hour the command "creme_job_manager" has started.
        - Some useless extra runs have been removed.
    # Apps :
        * Documents :
            - You could merge system folders & so, remove them.
        * Billing :
            - The inner-edition of TemplateBase instances bas been fixed.


== Version 2.4.18 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # Apps :
        * Emails :
            - In email synchronisation:
                - There was an error when accepting a fixed forwarded email.
                - The display of error, when using single actions (accept & delete), has been fixed.


== Version 2.4.17 ==

  Users side :
  ------------
    # The setting SOFTWARE_LABEL in now used for the title of the login page.
    # Apps :
        * Geolocation :
            - A crash in the JavaScript code of blocks when the entity is deleted has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Some issues with the populating of the test DB have been fixed.
          For example, the 'populate' was made even if the test DB creation failed (leading to confusion).


== Version 2.4.16 ==

  Users side :
  ------------
    # The settings ALLOWED_IMAGES_EXTENSIONS & ALLOWED_EXTENSIONS have been cleaned.
        - ".webp" has been added has allowed extension for images.
        - ".psd" & ".tga" are not used as image anymore.
        - ".js" & other code extensions have been removed.
    # Apps :
        * Activities :
            - The "automatic subject" feature avoids deleted Organisations.
        * Tickets :
            - In list-view, the background color for important tickets was broken.

