@@ -14,7 +14,7 @@ from parameterized import parameterized
 from PIL.Image import open as open_img
 
 from creme.creme_core.auth import EntityCredentials
-from creme.creme_core.models import Job, JobResult, SetCredentials
+from creme.creme_core.models import CremeUser, Job, JobResult, SetCredentials
 from creme.emails.creme_jobs import entity_emails_sync_type
 from creme.emails.models import (
     EmailSyncConfigItem,
@@ -823,6 +823,65 @@ class POPSynchronizationJobTestCase(_SynchronizationJobTestCase):
             [
                 person_info.person
                 for person_info in e2sync_2.related_persons.filter(
+                    type=EmailToSyncPerson.Type.RECIPIENT,
+                )
+            ],
+        )
+
+    @skipIfCustomContact
+    def test_job_related_persons__default_owner_is_team(self):
+        # user = self.login_as_emails_user(allowed_apps=['persons'])
+        user = self.login(is_superuser=False, allowed_apps=['persons'])
+        SetCredentials.objects.create(
+            role=user.role,
+            value=EntityCredentials.VIEW | EntityCredentials.LINK,
+            set_type=SetCredentials.ESET_OWN,
+        )
+
+        team = CremeUser.objects.create(username='Mail owner', is_team=True, role=None)
+        team.teammates = [user]
+
+        contact = Contact.objects.create(
+            user=user, first_name='Spike', last_name='Spiegel', email='spiegel@bebop.mrs',
+        )
+
+        self.create_config_item(user=team)
+        job = self._get_sync_job()
+
+        from_addr = 'fvalentine@bebop.mrs'
+
+        msg = EmailMessage()
+        msg['Subject'] = 'I want a swordfish'
+        msg['From'] = from_addr
+        msg['To'] = (contact.email,)
+
+        with patch('poplib.POP3_SSL') as pop_mock:
+            # Mocking
+            pop_mock.return_value = self.mock_POP_for_messages((1, msg))
+
+            # Go !
+            entity_emails_sync_type.execute(job)
+
+        all_e2sync = EmailToSync.objects.all()
+        self.assertEqual(1, len(all_e2sync))
+
+        e2sync = all_e2sync[0]
+        self.assertEqual(team, e2sync.user)
+
+        self.assertListEqual(
+            [(from_addr, None)],
+            [
+                (person_info.email, person_info.person)
+                for person_info in e2sync.related_persons.filter(
+                    type=EmailToSyncPerson.Type.SENDER,
+                )
+            ],
+        )
+        self.assertListEqual(
+            [(contact.email, contact)],
+            [
+                (person_info.email, person_info.person)
+                for person_info in e2sync.related_persons.filter(
                     type=EmailToSyncPerson.Type.RECIPIENT,
                 )
             ],
