@@ -10,6 +10,8 @@
     # Apps :
         * Documents :
             - You could merge system folders & so, remove them.
+        * Emails :
+            - There were some issues when the default owner of synchronised emails is a team.
         * Billing :
             - The inner-edition of TemplateBase instances bas been fixed.
 
